<resources>
    <string name="app_name">Assignment1_MobileApp_SongHJ</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="backspace">Backspace</string>
    <string name="clear">Clear</string>
    <string name="rm_0_00">RM 0.00</string>
    <string name="_100">100:</string>
    <string name="_50">50:</string>
    <string name="_20">20 :</string>
    <string name="_10">10:</string>
    <string name="_5Bill">5:</string>
    <string name="_1Bill">1:</string>
    <string name="_50c">50c</string>
    <string name="_20c">20c:</string>
    <string name="_10c">10c:</string>
    <string name="_5c">5c:</string>
    <string name="_10Bill">10:</string>
    <string name="_20Bill">20:</string>
    <string name="_50Bill">50:</string>
    <string name="_100Bill">100:</string>
    <string name="bill100">0</string>
    <string name="bill50">0</string>
    <string name="bill10">0</string>
    <string name="bill5">0</string>
    <string name="bill1">0</string>
    <string name="coin50">0</string>
    <string name="coin20">0</string>
    <string name="coin10">0</string>
    <string name="coin5">0</string>
    <string name="bill20">0</string>
    <string name="rm0_00">RM0.00</string>
</resources>